Bug 329672 r=mscott Thunderbird assertions on window close with spellchecker